crates/analyzer/tests/snapshots/errors__overflow_u128_neg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: literal out of range for `u128`
  ┌─ [snippet]:3:17
  │
3 │   let x: u128 = -1
  │                 ^^ does not fit into type `u128`

error: Can not apply unary operator
  ┌─ [snippet]:3:17
  │
3 │   let x: u128 = -1
  │                 ^^ Expected unsigned type `u128`. Unary operator `-` can not be used here.


